--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							</div>
 							<div class="goToLinks">
 								<div class="goToLink">
-									<a href="https://itunes.apple.com/us/app/juggler-a-game-about-juggling/id881172212?at=1l3vuBC" class="goToLink-button button" target="_blank">App Store Link</a>
+									<a href="https://itunes.apple.com/us/app/juggler-a-game-about-juggling/id881172212?at=1l3vuBC" class="goToLink-button button" target="_blank">App Store</a>
 								</div>
 								<div class="goToLink">
 									<a href="https://github.com/evanlws/Juggler_A_Game_About_Juggling" class="goToLink-button button" target="_blank">GitHub</a>
