Fixed spacing for contact info

--- a/index.html
+++ b/index.html
@@ -199,28 +199,20 @@
 				<div class="social-icon">
 					<a class="email" href="mailto:evanlws@me.com"></a>
 					<br>
-					<p>Email
-						<br> evanlws@me.com
-					</p>
+					<p class="contactLabel">Email<br>evanlws@me.com</p>
 				</div>
 				<br>
 				<div class="social-icon">
 					<a class="twitter" href="https://twitter.com/evanlws"></a>
-					<p>Twitter
-						<br> @evanlws
-					</p>
+					<p class="contactLabel">Twitter<br>@evanlws</p>
 				</div>
 				<div class="social-icon">
 					<a class="github" href="https://github.com/evanlws"></a>
-					<p>GitHub
-						<br> evanlws
-					</p>
+					<p class="contactLabel">GitHub<br>evanlws</p>
 				</div>
 				<div class="social-icon" id="last-item">
 					<a class="linkedin" href="https://www.linkedin.com/in/evanlws"></a>
-					<p>LinkedIn
-						<br> evanlws
-					</p>
+					<p class="contactLabel">LinkedIn<br>evanlws</p>
 				</div>
 			</div>
 		</div>
