--- a/top-marks/index.html
+++ b/top-marks/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Musicality</title>
+    <title>Top Marks</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,19 +11,19 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body id="top-marks">
     <div class="container">
         <div class="row">
             <div class="col-sm-7">
                 <section class="main-image">
-                    <img id="hero-image" src="../images/musicality-hero-image.png"><img>
+                    <img id="hero-image" src="../images/top-marks-hero-image.png"><img>
                 </section>
             </div>
             <div class="col-sm-5">
                 <section class="main-text">
-                    <h2 id="title-text">Musicality</h2>
-                    <h3 id="tagline-text">Never miss a beat.</h3>
-                    <p>The app that notifies you whenever your favorite artists release new music. Musicality keeps you up to date on your favorite artists, for free.</p>
+                    <h2 id="title-text">Top Marks</h2>
+                    <h3 id="tagline-text">The best way to keep track of your grades.</h3>
+                    <p>Top Marks is an app that allows you to easily keep track of your grades. Add multiple classes and track your progress over multiple semesters easily!</p>
                     <p id="app-store-button"><a href="https://itunes.apple.com/us/app/musicality-never-miss-a-beat/id945094708?at=1l3vuBC" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;width:165px;height:40px;"></a></p>
                 </section>
             </div>
