Added footer to Top Marks and Musicality

--- a/top-marks/index.html
+++ b/top-marks/index.html
@@ -20,15 +20,18 @@
                 </section>
             </div>
             <div class="col-sm-5">
-                <section class="main-text">
+                <section id="top-marks" class="main-text">
                     <h2 id="title-text">Top Marks</h2>
-                    <h3 id="tagline-text">The best way to keep track of your grades.</h3>
+                    <h3 id="tagline-text">The best way to keep track of your grades</h3>
                     <p>Top Marks is an app that allows you to easily keep track of your grades. Add multiple classes and track your progress over multiple semesters easily!</p>
-                    <p id="app-store-button"><a href="https://itunes.apple.com/us/app/musicality-never-miss-a-beat/id945094708?at=1l3vuBC" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;width:165px;height:40px;"></a></p>
+                    <p id="app-store-button"><a href="https://itunes.apple.com/us/app/top-marks/id1019063200?at=1l3vuBC" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg) no-repeat;width:165px;height:40px;"></a></p>
                 </section>
             </div>
         </div>
     </div>
+    <footer id="top-marks">
+        <a href="../index.html"><p>Made by Evan Lewis</p></a>
+    </footer>
 </body>
 
 </html>
