--- a/musicality/index.html
+++ b/musicality/index.html
@@ -29,6 +29,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <a href="../index.html"><p>Made by Evan Lewis</p></a>
+    </footer>
 </body>
 
 </html>
