--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <section class="about">
 	<p>&nbsp;</p>
 	<h2>print("Hello")</h2>
-	<p>My name is Evan Lewis and I'm an iOS developer located in New York. I've been creating apps since 2012 and since then, I've made 5 apps currently on the iOS and Mac App Store using both Objective-C and Swift. In addition to this, I currently do contract
-		work, and I'm open to full time iOS developer positions. <a href="#contact"><strong><u>Interested? Let's talk!</u></strong></a></p>
+	<p>My name is Evan Lewis and I'm an iOS developer located in New York. I've been creating apps since 2012 and since then, I've made 5 apps currently on the iOS and Mac App Store using both Objective-C and Swift. In addition to this, I currently freelance, but I'm open to full time iOS developer positions. <a href="#contact"><strong><u>Interested? Let's talk!</u></strong></a></p>
 	<p>&nbsp;</p>
 </section>
 <section class="apps">
