--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css" type="text/css"> 
+  <link rel="stylesheet" href="css/main.css" type="text/css">
 	<title>Evan Lewis - iOS Developer</title>
 </head>
 
@@ -197,9 +197,9 @@
 		<div class="row">
 			<div class="social-icons">
 				<div class="social-icon">
-					<a class="email" href="mailto:evanlws@me.com"></a>
+					<a class="email" href="mailto:evanlws.me@gmail.com"></a>
 					<br>
-					<p class="contactLabel">Email<br>evanlws@me.com</p>
+					<p class="contactLabel">Email<br>evanlws.me@gmail.com</p>
 				</div>
 				<br>
 				<div class="social-icon">
