Add past projects section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 
+			<h2>Past Projects</h2>
+			<hr />
+
 			<!--Top Marks-->
 			<div class="single-post">
 				<div class="post-image post-format-image span12">
